--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/team-1.jpg" alt="Mark"></img>
+            <img src="./images/team-1.jpg" alt="Mark" />
               <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/team-2.jpg" alt="Tom"></img>
+            <img src="./images/team-2.jpg" alt="Tom" />
               <h3>Tom Ford</h3>
               <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/team-3.jpg" alt="Camila"></img>
+            <img src="./images/team-3.jpg" alt="Camila" />
               <h3>Camila Garcia</h3>
               <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/team-4.jpg" alt="Daniel"></img>
+            <img src="./images/team-4.jpg" alt="Daniel" />
               <h3>Daniel Wilson</h3>
               <p>UI Designer</p>   
           </li>
