--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WEBSTUDIO</a>
-
       <nav>
+       <a href="./index.html">WebStudio</a>
+
+      
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -17,10 +18,12 @@
         </ul>
       </nav>
 
-      <ul>
+      <address>
+       <ul>
         <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      </ul>
+       </ul>
+     </address>
     </header>
     <main>
       <section>
@@ -32,6 +35,7 @@
       </section>
 
       <section>
+        <h2 hidden>Section2</h2>
        <ul>
          <li>
           <h3>Strategy</h3>
@@ -58,22 +62,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/team-1.jpg" alt="Mark" />
+            <img src="./images/team-1.jpg" alt="Mark" width="264" />
               <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/team-2.jpg" alt="Tom" />
+            <img src="./images/team-2.jpg" alt="Tom"  width="264" />
               <h3>Tom Ford</h3>
               <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/team-3.jpg" alt="Camila" />
+            <img src="./images/team-3.jpg" alt="Camila"  width="264" />
               <h3>Camila Garcia</h3>
               <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/team-4.jpg" alt="Daniel" />
+            <img src="./images/team-4.jpg" alt="Daniel"  width="264" />
               <h3>Daniel Wilson</h3>
               <p>UI Designer</p>   
           </li>
@@ -81,7 +85,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth solutions.
       </p>
