--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </section>
 
       <section>
-        <h2 hidden>Section2</h2>
+        <h2 hidden>Advantages</h2>
        <ul>
          <li>
           <h3>Strategy</h3>
